--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "axios": "^0.19.2",
     "moment": "^2.27.0",
     "react": "^16.13.1",
-    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
     "react-odometerjs": "^2.1.1",
@@ -18,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-svg-map": "^2.1.2",
+    "recharts": "^1.8.5",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
